--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,44 +1,47 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+# Nome do workflow
+name: Build e Deploy do Jekyll (GitHub Pages)
 
 on:
-  # Runs on pushes targeting the default branch
+  # Dispara o workflow em push para a branch 'main' (ou 'master')
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: ["main"] # Altere para "master" se for a branch principal do seu repo
+  # Permite rodar o workflow manualmente na aba Actions
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Permissões necessárias para que o GHA possa publicar no Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Permite apenas um deploy concorrente
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  # Build job
+  # Job para construir o site
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      # Configura o ambiente do GitHub Pages (incluindo Ruby)
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
+      # Constrói o site Jekyll usando a Action oficial do GitHub
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
+
+      # Faz o upload do artefato '_site' para o Pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: './_site'
 
-  # Deployment job
+  # Job para deploy
   deploy:
     environment:
       name: github-pages
